# ostrogradsky

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: 0001_init.sql  0002_claude_feature.sql  0003_codesave_comment_prompt.sql
src/bcworker/: __init__.py  __main__.py  basecamp.py  claude_runner.py  codesave.py  config.py  db.py  decision.py  followup.py  migrations.py  poller.py  stub.py  sync.py  workspace.py
tests/: conftest.py  test_basecamp.py  test_claude_runner.py  test_codesave.py  test_config.py  test_db.py  test_decision.py  test_followup.py  test_migrations.py  test_poller.py  test_stub.py  test_sync.py  test_workspace.py
workspace-template/: .mcp.json  CLAUDE.md
workspace-template/documents/: MYSQL.md  SPARK.md
